--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # 最適化API
-OPT_API_URL=http://host.docker.internal:8001
+OPT_API_URL=http://fastapi:8000
 
-# 内部APIのURL（GraphQL エンドポイント）
-INT_API_GQL_URL=http://host.docker.internal:8080/graphql
+# 内部APIのURL
+INT_API_URL=http://host.docker.internal:8080
 
 # 内部APIのAPIキー
 INT_API_KEY=
