--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@radix-ui/themes": "^3.2.1",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
